Updated win32 project files

--- a/source/win32/msvc/pbpeditor/pbpeditor.vcproj
+++ b/source/win32/msvc/pbpeditor/pbpeditor.vcproj
@@ -728,6 +728,10 @@
 					RelativePath="..\..\..\dialogs\unitinfodialog.cpp"
 					>
 				</File>
+				<File
+					RelativePath="..\..\..\dialogs\vehiclepropertyeditor.cpp"
+					>
+				</File>
 			</Filter>
 			<Filter
 				Name="widgets"
