--- a/source/win32/msvc/mapeditor/mapeditor.vcproj
+++ b/source/win32/msvc/mapeditor/mapeditor.vcproj
@@ -719,6 +719,10 @@
 					RelativePath="..\..\..\dialogs\unitinfodialog.cpp"
 					>
 				</File>
+				<File
+					RelativePath="..\..\..\dialogs\vehiclepropertyeditor.cpp"
+					>
+				</File>
 			</Filter>
 			<Filter
 				Name="widgets"
