Add libmikmod to installer

--- a/installer/asc.nsi.in
+++ b/installer/asc.nsi.in
@@ -75,6 +75,7 @@ Section "ASC main program (required)"
   File "@inst_win32_DLL_dir@/SDL_image.dll"
   File "@inst_win32_DLL_dir@/sdl_sound.dll"
   File "@inst_win32_DLL_dir@/vorbisfile.dll"
+  File "@inst_win32_DLL_dir@/libmikmod-2.dll"
   File "@inst_win32_DLL_dir@/libcurl.dll"
   File "@inst_win32_DLL_dir@/libeay32.dll" 
   File "@inst_win32_DLL_dir@/ssleay32.dll"
