--- a/source/graphics/Makefile.am
+++ b/source/graphics/Makefile.am
@@ -8,6 +8,6 @@ noinst_LTLIBRARIES 	= libgraphics.la
 libgraphics_la_SOURCES	= surface.cpp blitter.cpp drawing.cpp surface2png.cpp colorizer.cpp
 libgraphics_la_LIBADD		= @SDL_LIBS@ -lpng -lz
 
-## INCLUDES = -I$(top_srcdir)/source/libs/paragui/include 
+## AM_CPPFLAGS = -I$(top_srcdir)/source/libs/paragui/include 
 
 EXTRA_DIST=$(srcdir)/*.h  
