--- a/source/sdl/Makefile.am
+++ b/source/sdl/Makefile.am
@@ -4,7 +4,7 @@ MAINTAINERCLEANFILES	= Makefile.in
 AM_CXXFLAGS = @SDL_CFLAGS@  @SIGC_CFLAGS@ @LokiInclude@
 AM_CFLAGS   = @SDL_CFLAGS@  
 
-INCLUDES      = -I$(src_dir) -I$(top_builddir) 
+AM_CPPFLAGS      = -I$(src_dir) -I$(top_builddir) 
 
 noinst_LTLIBRARIES	= libsdl.la libsdlsnd.la
 
