--- a/source/dialogs/Makefile.am
+++ b/source/dialogs/Makefile.am
@@ -1,7 +1,7 @@
 
 MAINTAINERCLEANFILES    = Makefile.in
 
-INCLUDES = -I$(top_srcdir)/source/libs/paragui/include 
+AM_CPPFLAGS = -I$(top_srcdir)/source/libs/paragui/include 
 
 AM_CXXFLAGS             = $(SDL_CFLAGS) $(SIGC_CFLAGS)  @LokiInclude@
 
