--- a/source/libs/paragui/src/ystring/Makefile.in
+++ b/source/libs/paragui/src/ystring/Makefile.in
@@ -85,7 +85,7 @@ ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/m4/libtool.m4 \
 	$(top_srcdir)/m4/ltoptions.m4 $(top_srcdir)/m4/ltsugar.m4 \
 	$(top_srcdir)/m4/ltversion.m4 $(top_srcdir)/m4/lt~obsolete.m4 \
-	$(top_srcdir)/acinclude.m4 $(top_srcdir)/configure.in
+	$(top_srcdir)/acinclude.m4 $(top_srcdir)/configure.ac
 am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
 	$(ACLOCAL_M4)
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
@@ -354,7 +354,7 @@ libystring_la_SOURCES = \
 	ystring.cpp
 
 EXTRA_DIST = 
-INCLUDES = \
+AM_CPPFLAGS = \
 	$(SDL_CFLAGS) \
 	-I$(top_srcdir)/source/libs/paragui/include
 
