--- a/source/sdl/Makefile.in
+++ b/source/sdl/Makefile.in
@@ -85,7 +85,7 @@ ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/m4/libtool.m4 \
 	$(top_srcdir)/m4/ltoptions.m4 $(top_srcdir)/m4/ltsugar.m4 \
 	$(top_srcdir)/m4/ltversion.m4 $(top_srcdir)/m4/lt~obsolete.m4 \
-	$(top_srcdir)/acinclude.m4 $(top_srcdir)/configure.in
+	$(top_srcdir)/acinclude.m4 $(top_srcdir)/configure.ac
 am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
 	$(ACLOCAL_M4)
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
@@ -354,7 +354,7 @@ zipfound = @zipfound@
 MAINTAINERCLEANFILES = Makefile.in
 AM_CXXFLAGS = @SDL_CFLAGS@  @SIGC_CFLAGS@ @LokiInclude@
 AM_CFLAGS = @SDL_CFLAGS@  
-INCLUDES = -I$(src_dir) -I$(top_builddir) 
+AM_CPPFLAGS = -I$(src_dir) -I$(top_builddir) 
 noinst_LTLIBRARIES = libsdl.la libsdlsnd.la
 libsdl_la_SOURCES = graphics.cpp events.cpp 
 libsdl_la_LIBADD = @SDL_LIBS@ -lSDL_image -ljpeg 
