--- a/source/unix/asc/Makefile.am
+++ b/source/unix/asc/Makefile.am
@@ -2,7 +2,7 @@ vpath %.cpp $(srcdir)/../.. $(srcdir)/../../unittests
 
 MAINTAINERCLEANFILES	= Makefile.in
 
-INCLUDES      = -I$(top_srcdir) -I$(top_srcdir)/source -I$(top_srcdir)/source/libs/paragui/include @LokiInclude@
+AM_CPPFLAGS      = -I$(top_srcdir) -I$(top_srcdir)/source -I$(top_srcdir)/source/libs/paragui/include @LokiInclude@
 
 AM_CXXFLAGS   = $(SDL_CFLAGS) -Dsgmain $(SIGC_CFLAGS)
 
