--- a/source/util/Makefile.am
+++ b/source/util/Makefile.am
@@ -8,6 +8,6 @@ noinst_LTLIBRARIES 	= libutil.la
 libutil_la_SOURCES	= messaginghub.cpp
 libutil_la_LIBADD		= @SDL_LIBS@ 
 
-## INCLUDES = -I$(top_srcdir)/source/libs/paragui/include 
+## AM_CPPFLAGS = -I$(top_srcdir)/source/libs/paragui/include 
 
 EXTRA_DIST=$(srcdir)/*.h  
