--- a/source/widgets/Makefile.in
+++ b/source/widgets/Makefile.in
@@ -85,7 +85,7 @@ ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/m4/libtool.m4 \
 	$(top_srcdir)/m4/ltoptions.m4 $(top_srcdir)/m4/ltsugar.m4 \
 	$(top_srcdir)/m4/ltversion.m4 $(top_srcdir)/m4/lt~obsolete.m4 \
-	$(top_srcdir)/acinclude.m4 $(top_srcdir)/configure.in
+	$(top_srcdir)/acinclude.m4 $(top_srcdir)/configure.ac
 am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
 	$(ACLOCAL_M4)
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
@@ -358,7 +358,7 @@ libwidgets_la_SOURCES = textrenderer.cpp bargraphwidget.cpp dropdownselector.cpp
                           targetcoordinatelocator.cpp textrenderer-addons.cpp vehicletypeimage.cpp
 
 libwidgets_la_LIBADD = @SDL_LIBS@
-INCLUDES = -I$(top_srcdir)/source/libs/paragui/include 
+AM_CPPFLAGS = -I$(top_srcdir)/source/libs/paragui/include 
 EXTRA_DIST = $(srcdir)/*.h
 all: all-am
 
