--- a/source/sdl/Makefile.in
+++ b/source/sdl/Makefile.in
@@ -357,7 +357,7 @@ AM_CFLAGS = @SDL_CFLAGS@
 AM_CPPFLAGS = -I$(src_dir) -I$(top_builddir) 
 noinst_LTLIBRARIES = libsdl.la libsdlsnd.la
 libsdl_la_SOURCES = graphics.cpp events.cpp 
-libsdl_la_LIBADD = @SDL_LIBS@ -lSDL_image -ljpeg 
+libsdl_la_LIBADD = @SDL_LIBS@ -lSDL_image 
 libsdlsnd_la_SOURCES = sound.cpp  
 libsdlsnd_la_LIBADD = @SDL_LIBS@ -lSDL_mixer @SDL_SOUND_LIB@ 
 EXTRA_DIST = $(srcdir)/*.h $(srcdir)/sdlstretch.cpp $(srcdir)/sdl.vcproj  
