--- a/source/win32/msvc/ASC/ASC.vcproj
+++ b/source/win32/msvc/ASC/ASC.vcproj
@@ -318,6 +318,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\dialogs\eventinfo.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\explosivemines.cpp"
 				>
 			</File>
