Updated MSVC project files

--- a/source/win32/msvc/ASC/ASC.vcproj
+++ b/source/win32/msvc/ASC/ASC.vcproj
@@ -407,6 +407,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\dialogs\eventinfo.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\explosivemines.cpp"
 				>
 			</File>
